# tonyos

apps/TonyOSzip/: pyproject.toml
apps/TonyOSzip/TonyOS/: .env.example  SECURITY-CHECKLIST.md  memory_log.jsonl  supabase-schema.sql
apps/TonyOSzip/attached_assets/: 2026_02_04_26-ACC_INVENTORY_REPORT_1770304701954.xlsx  Pasted--Code-gs-const-SHEET-NAME-transactions-Set-your-secret-_1765666378410.txt  Pasted--Coframe-Replit-Enterprise-watcher-loaded-40The-source-_1765768132389.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-titl_1767802606121.txt  Pasted--Expected-CSV-input-columns-Your-CSV-should-have-names-_1768827769753.txt  Pasted--You-said-Tony-and-Matt-So-I-am-in-the-beginning-stages_1768440733313.txt  Pasted--function-const-el-id-document-getElementById-id-const-_1766150214733.txt  Pasted--industries-tier-1-Pharmaceutical-Manufacturing-Pharmac_1768469781032.txt  Pasted--root-bg-07070a-panel-0f1118-ink-f5f7ff-muted-b1b6c8-li_1765770607543.txt  Pasted--target-scope-description-Only-include-industries-where_1768469979730.txt  Pasted--type-object-required-company-storybrand-personas-co-17_1769077302371.txt  Pasted-1-Create-a-new-Replit-project-Choose-Node-js-Name-it-re_1769188537594.txt  Pasted-ARCHITECTURE-User-Keyword-Search-API-Domain-List-robots_1769111450118.txt  Pasted-Alright-I-m-going-to-give-you-the-full-system-end-to-en_1766327551416.txt  Pasted-Alright-this-is-where-we-stop-admiring-the-engine-bay-a_1770139746059.txt  Pasted-Got-it-you-want-actual-runnable-source-code-not-a-messa_1768940797450.txt  TB_Budget_1765695064075.xlsx  (+16 more)
(+469 files in other folders)
