[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.75.0",
    "beautifulsoup4>=4.14.3",
    "flask>=3.1.2",
    "flask-dance>=7.1.0",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "google-api-python-client>=2.187.0",
    "google-auth>=2.43.0",
    "google-genai>=1.55.0",
    "gunicorn>=23.0.0",
    "openai>=2.11.0",
    "psycopg2-binary>=2.9.11",
    "pyjwt>=2.10.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "reportlab>=4.4.7",
    "requests>=2.32.5",
]
